@@ -144,8 +144,6 @@ public class IconofsinEntity extends DemonEntity implements IAnimatable {
 		++this.deathTime;
 		if (this.deathTime == 50) {
 			this.remove();
-			if (level.isClientSide) {
-			}
 		}
 	}
 
