@@ -47,7 +47,7 @@ public class Ballista extends DoomBaseItem {
 					abstractarrowentity.shootFromRotation(playerentity, playerentity.xRot, playerentity.yRot, 0.0F,
 							1.0F * 3.0F, 1.0F);
 
-					abstractarrowentity.setBaseDamage(6.5);
+					abstractarrowentity.setBaseDamage(14.5);
 					abstractarrowentity.isNoGravity();
 
 					stack.hurtAndBreak(1, entityLiving, p -> p.broadcastBreakEvent(entityLiving.getUsedItemHand()));
