@@ -332,6 +332,12 @@
 	"key.doom.tab": "Switch",
 	"enchantment.doom.leaping_doom": "Doom Leaping",
 	"enchantment.doom.leaping_doom.desc": "Allows the player to perform mid-air jump, similar to that of Doom 2016/Eternal",
+	"doom.achievement.argent" : "Argent Energy",
+	"doom.achievement.argent.desc" : "Created by combining the tortured souls of the Nether and the power of the Aether",
+	"doom.achievement.argent_plate" : "Argent Plate",
+	"doom.achievement.argent_plate.desc" : "Created by combining the power of Argent Energy and the metal of the Overworld",
+	"doom.achievement.summon_icon" : "The Icon Rises",
+	"doom.achievement.summon_icon.desc" : "Summon the Icon of Sin",
 	"doom.achievement.titan_skull" : "Titan Skull",
 	"doom.achievement.titan_skull.desc" : "Find a skull of a long dead Titan.",
 	"doom.achievement.portal" : "Slipgate",
