@@ -1,0 +1,30 @@
+{
+	"display": {
+		"icon": {
+			"item": "doom:argent_plate"
+		},
+		"title": {
+			"translate": "doom.achievement.argent_plate"
+		},
+		"description": {
+			"translate": "doom.achievement.argent_plate.desc"
+		},
+		"frame": "challenge",
+		"show_toast": true,
+		"announce_to_chat": true,
+		"hidden": false
+	},
+	"parent": "doom:argent",
+	"criteria": {
+		"requirement": {
+			"trigger": "minecraft:inventory_changed",
+			"conditions": {
+				"items": [
+					{
+						"item": "doom:argent_plate"
+					}
+				]
+			}
+		}
+	}
+}
