@@ -1,0 +1,28 @@
+{
+	"display": {
+		"icon": {
+			"item": "doom:icon_wall1"
+		},
+		"title": {
+			"translate": "doom.achievement.summon_icon"
+		},
+		"description": {
+			"translate": "doom.achievement.summon_icon.desc"
+		},
+		"frame": "challenge",
+		"show_toast": true,
+		"announce_to_chat": true,
+		"hidden": false
+	},
+	"parent": "minecraft:adventure/root",
+	"criteria": {
+		"requirement": {
+			"trigger": "minecraft:summoned_entity",
+			"conditions": {
+				"entity": {
+					"type": "doom:iconofsin"
+				}
+			}
+		}
+	}
+}
