@@ -1,5 +1,0 @@
-{
-	"name": "Forge-Only Features",
-	"description": "This is about the various Forge only features of MC Doom!",
-	"icon": "minecraft:anvil"
-}
