@@ -16,7 +16,7 @@ v.4.0.0
 	- The Nether will now generate Titan skulls, that show signs of being transformed into a place of worship though it seems they were abandoned.
 	- The Overworld will now generate massive portals, similar to ruined portals but bigger and can spawn the mods mobs.
 - Structures are configurable for either off or on for new worlds.
-- Added Advancements for the 3 new Doom structures.
+- Added Advancements for the 3 new Doom structures, Argent Energy/Plate, and summoning the Icon of Sin.
 - Updated Argent Tools, Ballista/Unmaykr bolts, Argent Energy/Plate, BFG Cell, Inmortal Sphere, and Daisy (Now rabbit foot) item textures.
 - Scaled up the OG Cyberdemon.
 - New Arachnotron and Spider Mastermind animations!
@@ -40,6 +40,7 @@ v.4.0.0
 - Icon of Sin drops Argent Blocks instead of Energy, making the cost very worth it to summon.
 - Icon of Sin no longer takes suffocation damage.
 - Icon of Sin attack pattern has been redone.
+- Ballista and Unmaykr tweaked.
 - Fixed Marauder attacks.
 
 ## Not yet implemented but assets and code are in-process awaiting creation of models ## 
